--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ canonifyurls = true
  info = "Various courses"
  wgavatar = "/img/wglogo.png"
  favicon_32 = "/img/favicon.png"
- footercontent = "Information"
+ footercontent = ""
  dateformat = "January 2, 2006"
  hideCredits = false
  hideCopyright = false
