--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = ""
 languagecode = "en"
 defaultcontentlanguage = "en"
 
-paginate = 20
+pagination.pagerSize = 20
 canonifyurls = true
 
 ignoreFiles = [ "\\.qmd$", "\\.ipynb$", "\\.py$" ]
