add ignoreLogs to avoid warnings in newer hugo

--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ pagination.pagerSize = 20
 canonifyurls = true
 
 ignoreFiles = [ "\\.qmd$", "\\.ipynb$", "\\.py$" ]
+ignoreLogs = ['warning-goldmark-raw-html']
 
 [markup]
   [markup.highlight]
