markdown attributes to add colour to notes

--- a/config.toml
+++ b/config.toml
@@ -31,5 +31,7 @@ ignoreLogs = ['warning-goldmark-raw-html']
 [languages]
     [languages.en]
         languagename = "English"
-
         [languages.en.menu]
+
+[markup.goldmark.parser.attribute]
+block = true # default is false
